--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  DIGEST: ${{ DIGEST }}
 
 jobs:
   build:
@@ -136,7 +137,7 @@ jobs:
         run: |
           docker push ghcr.io/ammnt/nginx:main
           docker tag ghcr.io/ammnt/nginx:main ammnt/nginx:main
-          export DIGEST=$(docker images --no-trunc --quiet ghcr.io/ammnt/nginx:main) >> $GITHUB_ENV
+          export DIGEST=$(docker images --no-trunc --quiet ghcr.io/ammnt/nginx:main)
           echo "The digest is: ${DIGEST}"
           docker push ammnt/nginx:main
 
