--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -136,8 +136,7 @@ jobs:
         run: |
           docker push ghcr.io/ammnt/nginx:main
           docker tag ghcr.io/ammnt/nginx:main ammnt/nginx:main
-          echo "DIGEST=docker images --no-trunc --quiet ghcr.io/ammnt/nginx:main)" >> $GITHUB_ENV
-          echo "The  is: ${DIGEST}"
+          export DIGEST=$(docker images --no-trunc --quiet ghcr.io/ammnt/nginx:main) >> $GITHUB_ENV
           docker push ammnt/nginx:main
 
       - name: Attest📍
