--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -136,9 +136,9 @@ jobs:
         run: |
           docker push ghcr.io/ammnt/nginx:main
           docker tag ghcr.io/ammnt/nginx:main ammnt/nginx:main
-          export DIGEST=$(docker images --no-trunc --quiet ghcr.io/ammnt/nginx:main)
+          DIGEST=$(docker images --no-trunc --quiet ghcr.io/ammnt/nginx:main)
           docker push ammnt/nginx:main
-          echo "DIGEST=${DIGEST}" >> $GITHUB_OUTPUT
+          echo "DIGEST=$DIGEST" >> $GITHUB_ENV
 
       - name: Attest📍
         uses: actions/attest-build-provenance@v1.1.2
