--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         uses: docker/setup-buildx-action@v3.3.0
 
       - name: Log into ${{ env.REGISTRY }}🔑
-        uses: docker/login-action@v3.1.0
+        uses: docker/login-action@v3.2.0
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -81,7 +81,7 @@ jobs:
           curl -v http://127.0.0.1:8080 || exit 1
 
       - name: Analyze for critical and high CVEs💊
-        uses: docker/scout-action@v1.8.0
+        uses: docker/scout-action@v1.9.3
         with:
           command: cves,sbom
           image: ghcr.io/ammnt/nginx:main
@@ -140,7 +140,7 @@ jobs:
           docker push ammnt/nginx:main
           echo "DIGEST=$DIGEST" >> $GITHUB_ENV
 
-      - name: Attest📍
+      - name: Attestation the Docker image📍
         uses: actions/attest-build-provenance@v1.1.2
         with:
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
