--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Log into Docker Hub🔑
-        uses: docker/login-action@v3.1.0
+        uses: docker/login-action@v3.2.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -110,10 +110,28 @@ jobs:
           path: "${{ github.workspace }}/dependency-results.sbom.json"
           retention-days: 20
 
+      - name: Scan image with Anchore scanner🔍
+        uses: anchore/scan-action@v3.6.4
+        with:
+          image: ghcr.io/ammnt/nginx:main
+          fail-build: true
+
+      - name: Run Clair V4 image scanner🔍
+        uses: quay/clair-action@main
+        with:
+          image-ref: ghcr.io/ammnt/nginx:main
+          format: sarif
+          output: clair_results.sarif
+
+      - name: Upload Clair result to GitHub Code Scanning📊
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: clair_results.sarif
+
       - name: Scan the image and upload dependency results🔍
         uses: anchore/sbom-action@v0.15.11
         with:
-          syft-version: v1.3.0
+          syft-version: v1.5.0
           image: ghcr.io/ammnt/nginx:main
           artifact-name: image.spdx.json
           dependency-snapshot: false
@@ -127,7 +145,7 @@ jobs:
           image: ghcr.io/ammnt/nginx:main
           args: --file=Dockerfile
 
-      - name: Upload result to GitHub Code Scanning📊
+      - name: Upload Snyk result to GitHub Code Scanning📊
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: snyk.sarif
