added: Clair image scanner and update dependencies

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,7 +104,7 @@ jobs:
           scanners: "vuln"
 
       - name: Upload Trivy report📊
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4.3.3
         with:
           name: trivy-sbom-report
           path: "${{ github.workspace }}/dependency-results.sbom.json"
@@ -143,6 +143,16 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: snyk.sarif
+
+      - name: Analyze image with Clair💊
+        run: |
+          docker run -d --name db arminc/clair-db
+          sleep 15
+          docker run -p 6060:6060 --link db:postgres -d --name clair arminc/clair-local-scan
+          sleep 1
+          DOCKER_GATEWAY=$(docker network inspect bridge --format "{{range .IPAM.Config}}{{.Gateway}}{{end}}")
+          wget -qO clair-scanner https://github.com/arminc/clair-scanner/releases/download/v8/clair-scanner_linux_amd64 && chmod +x clair-scanner
+          ./clair-scanner --ip="$DOCKER_GATEWAY" ghcr.io/ammnt/nginx:main || exit 0
 
       - name: Push the Docker images to registries💾
         run: |
