added: the image exploration step with Dive

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -151,6 +151,15 @@ jobs:
           tag: ghcr.io/ammnt/nginx:main
           overwrite: true
 
+      - name: Explore the Docker image with Dive🔍
+        timeout-minutes: 2
+        env:
+          CI: true
+        run: |
+          wget -q https://github.com/wagoodman/dive/releases/download/v0.12.0/dive_0.12.0_linux_amd64.tar.gz
+          tar xvzf dive_0.12.0_linux_amd64.tar.gz -C /usr/local/bin
+          dive --ci-config "${{ github.workspace }}/.dive-ci/" ghcr.io/ammnt/nginx:main
+
       - name: Test the Docker image🧪
         run: |
           docker run -d --rm -p 127.0.0.1:8080:8080/tcp ghcr.io/ammnt/nginx:main
