--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,8 @@ on:
   # - cron: "00 12 1 * *"
   push:
     branches: ["main"]
-  # pull_request:
-  #  branches: ["main"]
+  pull_request:
+    branches-ignore: ["main"]
 
 env:
   REGISTRY: ghcr.io
@@ -72,7 +72,7 @@ jobs:
           command: cves,sbom
           image: ghcr.io/ammnt/nginx:main
           sarif-file: sarif.output.json
-          summary: true
+          summary: false
 
       - name: Upload Docker Scout report📊
         uses: github/codeql-action/upload-sarif@v3
@@ -113,7 +113,7 @@ jobs:
       - name: Analyze image with Syft💊
         uses: anchore/sbom-action@v0.16.0
         with:
-          syft-version: v1.5.0
+          syft-version: v1.6.0
           image: ghcr.io/ammnt/nginx:main
           artifact-name: image.spdx.json
           dependency-snapshot: false
