changed: version and latest tags - no more main tag

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -169,10 +169,8 @@ jobs:
           docker tag ${{ github.repository }}:${{ env.APP_VERSION }} ${{ github.repository }}:latest
           docker tag ${{ github.repository }}:${{ env.APP_VERSION }} ammnt/nginx:${{ env.APP_VERSION }}
           docker tag ${{ github.repository }}:${{ env.APP_VERSION }} ammnt/nginx:latest
-          docker push ${{ github.repository }}:${{ env.APP_VERSION }}
-          docker push ammnt/nginx:${{ env.APP_VERSION }}
-          docker push ${{ github.repository }}:latest
-          docker push ammnt/nginx:latest
+          docker push ${{ github.repository }} --all-tags
+          docker push ammnt/nginx --all-tags
           DIGEST=$(docker images --no-trunc --quiet ${{ github.repository }}:${{ env.APP_VERSION }})
           echo "DIGEST=$DIGEST" >> $GITHUB_ENV
 
