--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  APP_VERSION: 1.27.2
+  APP_VERSION: 1.27.3
 
 jobs:
   build:
@@ -27,8 +27,8 @@ jobs:
       - name: Checkout repository🧱
         uses: actions/checkout@v4.2.2
 
-      - name: Install cosign🔒
-        uses: sigstore/cosign-installer@v3.7.0
+      # - name: Install cosign🔒
+      #   uses: sigstore/cosign-installer@v3.7.0
 
       - name: Setup Docker buildx🛠️
         uses: docker/setup-buildx-action@v3.7.1
@@ -112,7 +112,7 @@ jobs:
       - name: Analyze image with Syft💊
         uses: anchore/sbom-action@v0.17.6
         with:
-          syft-version: v1.16.0
+          syft-version: v1.17.0
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           artifact-name: image.spdx.json
           dependency-snapshot: false
@@ -181,9 +181,10 @@ jobs:
           subject-digest: ${{ env.DIGEST }}
           push-to-registry: false
 
-      - name: Sign the published Docker image🔐
-        env:
-          COSIGN_EXPERIMENTAL: "true"
-        run: |
-          cosign sign ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ env.DIGEST }}
-          cosign sign docker.io/${{ env.IMAGE_NAME }}@${{ env.DIGEST }}
+      # - name: Sign the published Docker image🔐
+      #   env:
+      #     COSIGN_EXPERIMENTAL: "true"
+      #   run: |
+      #     echo ${{ env.DIGEST }}
+      #     cosign sign ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ env.DIGEST }}
+      #     cosign sign ${{ env.IMAGE_NAME }}@${{ env.DIGEST }}
