--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  APP_VERSION: 1.27.3
+  APP_VERSION: 1.8.0
 
 jobs:
   build:
@@ -27,11 +27,13 @@ jobs:
       - name: Checkout repository🧱
         uses: actions/checkout@v4.2.2
 
-      # - name: Install cosign🔒
-      #   uses: sigstore/cosign-installer@v3.7.0
+      - name: Install cosign🔒
+        uses: sigstore/cosign-installer@v3.7.0
+        with:
+          cosign-release: "v2.4.1"
 
       - name: Setup Docker buildx🛠️
-        uses: docker/setup-buildx-action@v3.7.1
+        uses: docker/setup-buildx-action@v3.8.0
 
       - name: Log into GHCR🔑
         uses: docker/login-action@v3.3.0
@@ -51,6 +53,13 @@ jobs:
         uses: docker/metadata-action@v5.6.1
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          labels: |
+            description="Distroless NGINX built with QUIC and HTTP/3 support🚀"
+            maintainer="ammnt <admin@msftcnsi.com>"
+            org.opencontainers.image.description="Distroless NGINX built with QUIC and HTTP/3 support🚀"
+            org.opencontainers.image.authors="ammnt, admin@msftcnsi.com"
+            org.opencontainers.image.title="Distroless NGINX built with QUIC and HTTP/3 support🚀"
+            org.opencontainers.image.source="https://github.com/ammnt/nginx/"
 
       - name: Build the Docker image⛓️
         id: build
@@ -66,7 +75,7 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Analyze image with Docker Scout💊
-        uses: docker/scout-action@v1.15.1
+        uses: docker/scout-action@v1.16.1
         with:
           command: cves,sbom
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
@@ -90,7 +99,7 @@ jobs:
           github-pat: ${{ secrets.GH_TOKEN }}
 
       - name: Upload Trivy report📊
-        uses: actions/upload-artifact@v4.4.3
+        uses: actions/upload-artifact@v4.5.0
         with:
           name: trivy-sbom-report
           path: "${{ github.workspace }}/dependency-results.sbom.json"
@@ -98,7 +107,7 @@ jobs:
 
       - name: Analyze image with Grype💊
         id: anchore
-        uses: anchore/scan-action@v5.3.0
+        uses: anchore/scan-action@v6.0.0
         with:
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           fail-build: false
@@ -110,7 +119,7 @@ jobs:
           sarif_file: ${{ steps.anchore.outputs.sarif }}
 
       - name: Analyze image with Syft💊
-        uses: anchore/sbom-action@v0.17.8
+        uses: anchore/sbom-action@v0.17.9
         with:
           syft-version: v1.18.1
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
@@ -141,14 +150,29 @@ jobs:
           wget -qO clair-scanner https://github.com/arminc/clair-scanner/releases/download/v8/clair-scanner_linux_amd64 && chmod +x clair-scanner
           ./clair-scanner --ip="$DOCKER_GATEWAY" ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} || exit 0
 
+      # - name: Slim the Docker image🚀
+      #   uses: kitabisa/docker-slim-action@v1.1.2
+      #   env:
+      #     DSLIM_HTTP_PROBE: false
+      #   with:
+      #     target: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
+      #     tag: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
+      #     overwrite: true
+      #     version: 1.40.11
+
       - name: Slim the Docker image🚀
-        uses: kitabisa/docker-slim-action@v1.1.2
-        env:
-          DSLIM_HTTP_PROBE: false
-        with:
-          target: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-          tag: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-          overwrite: true
+        run: |
+          curl -L -o ds.tar.gz https://github.com/slimtoolkit/slim/releases/download/1.40.11/dist_linux.tar.gz
+          tar -xvf ds.tar.gz
+          ./dist_linux/slim --verbose --debug build --target ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} \
+          --tag ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} --http-probe=false \
+          --label description="Distroless NGINX built with QUIC and HTTP/3 support🚀" \
+          --label maintainer="ammnt <admin@msftcnsi.com>" \
+          --label org.opencontainers.image.description="Distroless NGINX built with QUIC and HTTP/3 support🚀" \
+          --label org.opencontainers.image.authors="ammnt, admin@msftcnsi.com" \
+          --label org.opencontainers.image.title="Distroless NGINX built with QUIC and HTTP/3 support🚀" \
+          --label org.opencontainers.image.source="https://github.com/ammnt/nginx/" \
+          --continue-after=5
 
       - name: Explore the Docker image with Dive🔍
         timeout-minutes: 2
@@ -171,20 +195,31 @@ jobs:
           docker tag ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} ammnt/nginx:latest
           docker push ghcr.io/ammnt/nginx --all-tags
           docker push ammnt/nginx --all-tags
-          DIGEST=$(docker images --no-trunc --quiet ghcr.io/ammnt/nginx:${{ env.APP_VERSION }})
+          DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} | sed -e "s|ghcr.io/ammnt/nginx@||g" | sed -e "s|ammnt/nginx@||g")
           echo "DIGEST=$DIGEST" >> $GITHUB_ENV
 
       - name: Attestation the Docker image📍
-        uses: actions/attest-build-provenance@v1.4.4
+        uses: actions/attest-build-provenance@v2.1.0
         with:
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           subject-digest: ${{ env.DIGEST }}
           push-to-registry: false
 
-      # - name: Sign the published Docker image🔐
-      #   env:
-      #     COSIGN_EXPERIMENTAL: "true"
-      #   run: |
-      #     echo ${{ env.DIGEST }}
-      #     cosign sign ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@${{ env.DIGEST }}
-      #     cosign sign ${{ env.IMAGE_NAME }}@${{ env.DIGEST }}
+      - name: Sign the published Docker image🔐
+        env:
+          COSIGN_EXPERIMENTAL: "true"
+          COSIGN_KEY: ${{secrets.COSIGN_KEY}}
+          COSIGN_PASSWORD: ${{secrets.COSIGN_PASSWORD}}
+        run: |
+          cosign sign -y --recursive --key env://COSIGN_KEY ghcr.io/ammnt/nginx@${{ env.DIGEST }}
+          cosign sign -y --recursive --key env://COSIGN_KEY ammnt/nginx@${{ env.DIGEST }}
+        shell: bash
+
+      - name: Check the published Docker image👌
+        run: |
+          docker buildx imagetools inspect ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
+          docker buildx imagetools inspect ammnt/nginx:${{ env.APP_VERSION }}
+          docker pull ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
+          docker pull ammnt/nginx:${{ env.APP_VERSION }}
+          cosign verify --key cosign.pub ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
+          cosign verify --key cosign.pub ammnt/nginx:${{ env.APP_VERSION }}
