--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -160,6 +160,11 @@ jobs:
       #     overwrite: true
       #     version: 1.40.11
 
+      # - name: Dump the report📊
+      # - run: echo "${REPORT}"
+      #   env:
+      #     REPORT: ${{ steps.slim.outputs.report }}
+
       - name: Slim the Docker image🚀
         run: |
           curl -L -o ds.tar.gz https://github.com/slimtoolkit/slim/releases/download/1.40.11/dist_linux.tar.gz
@@ -173,6 +178,12 @@ jobs:
           --label org.opencontainers.image.title="Distroless NGINX built with QUIC and HTTP/3 support🚀" \
           --label org.opencontainers.image.source="https://github.com/ammnt/nginx/" \
           --continue-after=5
+
+      - name: Dump the report📊
+        uses: actions/upload-artifact@v4.5.0
+        with:
+          name: slim.report
+          path: "${{ github.workspace }}/slim.report.json"
 
       - name: Explore the Docker image with Dive🔍
         timeout-minutes: 2
