added: Docker compose in README.MD and AppArmor profile examples

--- a/nginx.toml
+++ b/nginx.toml
@@ -1,3 +1,4 @@
+# This is an example of a AppArmor profile. Further configuration is required.
 #include <tunables/global>
 
 profile docker-nginx flags=(attach_disconnected,mediate_deleted) {
