--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,36 +152,36 @@ jobs:
           wget -qO clair-scanner https://github.com/arminc/clair-scanner/releases/download/v8/clair-scanner_linux_amd64 && chmod +x clair-scanner
           ./clair-scanner --ip="$DOCKER_GATEWAY" ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} || exit 0
 
-      # - name: Slim the Docker image🚀
-      #   uses: kitabisa/docker-slim-action@v1.1.2
-      #   env:
-      #     DSLIM_HTTP_PROBE: false
-      #   with:
-      #     target: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-      #     tag: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-      #     overwrite: true
-      #     version: 1.40.11
-
-      # - name: Dump the report📊
-      #   run: echo "${REPORT}"
-      #   env:
-      #     REPORT: ${{ steps.slim.outputs.report }}
-
       - name: Slim the Docker image🚀
-        run: |
-          curl -L -o ds.tar.gz https://github.com/slimtoolkit/slim/releases/download/1.40.11/dist_linux.tar.gz
-          tar -xvf ds.tar.gz
-          ./dist_linux/slim --verbose --debug build --target ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} \
-          --tag ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} --http-probe=false \
-          --label description="Distroless NGINX built with QUIC and HTTP/3 support🚀" \
-          --label maintainer="ammnt <admin@msftcnsi.com>" \
-          --label org.opencontainers.image.description="Distroless NGINX built with QUIC and HTTP/3 support🚀" \
-          --label org.opencontainers.image.authors="ammnt, admin@msftcnsi.com" \
-          --label org.opencontainers.image.title="Distroless NGINX built with QUIC and HTTP/3 support🚀" \
-          --label org.opencontainers.image.source="https://github.com/ammnt/nginx/" \
-          --continue-after=5
+        uses: kitabisa/docker-slim-action@v1.1.2
+        env:
+          DSLIM_HTTP_PROBE: false
+        with:
+          target: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
+          tag: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
+          overwrite: true
+          version: 1.40.11
 
       - name: Dump the report📊
+        run: echo "${REPORT}"
+        env:
+          REPORT: ${{ steps.slim.outputs.report }}
+
+      # - name: Slim the Docker image🚀
+      #   run: |
+      #     curl -L -o ds.tar.gz https://github.com/slimtoolkit/slim/releases/download/1.40.11/dist_linux.tar.gz
+      #     tar -xvf ds.tar.gz
+      #     ./dist_linux/slim --verbose --debug build --target ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} \
+      #     --tag ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} --http-probe=false \
+      #     --label description="Distroless NGINX built with QUIC and HTTP/3 support🚀" \
+      #     --label maintainer="ammnt <admin@msftcnsi.com>" \
+      #     --label org.opencontainers.image.description="Distroless NGINX built with QUIC and HTTP/3 support🚀" \
+      #     --label org.opencontainers.image.authors="ammnt, admin@msftcnsi.com" \
+      #     --label org.opencontainers.image.title="Distroless NGINX built with QUIC and HTTP/3 support🚀" \
+      #     --label org.opencontainers.image.source="https://github.com/ammnt/nginx/" \
+      #     --continue-after=5
+
+      - name: Upload the report📊
         uses: actions/upload-artifact@v4.5.0
         with:
           name: slim.report
