--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Setup Docker buildx🛠️
         uses: docker/setup-buildx-action@v3.10.0
         with:
-          version: v0.21.2
-          driver-opts: image=moby/buildkit:v0.20.1
+          version: v0.22.0
+          driver-opts: image=moby/buildkit:v0.20.2-rootless
 
       - name: Log into GHCR🔑
         uses: docker/login-action@v3.3.0
@@ -136,7 +136,7 @@ jobs:
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           fail-build: false
           severity-cutoff: critical
-          grype-version: v0.89.0
+          grype-version: v0.91.0
           output-file: "${{ github.workspace }}/grype.report.json"
 
       - name: Upload Grype report📊
@@ -188,8 +188,8 @@ jobs:
         env:
           CI: true
         run: |
-          wget -q https://github.com/wagoodman/dive/releases/download/v0.12.0/dive_0.12.0_linux_amd64.tar.gz
-          tar xvzf dive_0.12.0_linux_amd64.tar.gz -C /usr/local/bin
+          wget -q https://github.com/wagoodman/dive/releases/download/v0.13.1/dive_0.13.1_linux_amd64.tar.gz
+          tar xvzf dive_0.13.1_linux_amd64.tar.gz -C /usr/local/bin
           dive --ci-config "${{ github.workspace }}/.dive-ci/" ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
 
       - name: Test the Docker image🧪
@@ -201,7 +201,7 @@ jobs:
       - name: Analyze image with Syft💊
         uses: anchore/sbom-action@v0.18.0
         with:
-          syft-version: v1.20.0
+          syft-version: v1.22.0
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           format: spdx-json
           output-file: syft.report.json
