--- a/nginx_http3.conf
+++ b/nginx_http3.conf
@@ -1,4 +1,4 @@
-# This is an example of a configuration file for enabling QUIC and HTTP3. Further configuration is required.
+# This is an example of a configuration file for enabling QUIC, HTTP3 and "A+" SSL tests rating. Further configuration is required.
 worker_processes auto;
 worker_rlimit_nofile 65536;
 pid /tmp/nginx.pid;
@@ -17,14 +17,24 @@ http {
     aio threads;
     tcp_nopush on;
     tcp_nodelay on;
-    reset_timedout_connection on;
-    send_timeout 2;
-    client_body_timeout 60;
-    client_body_buffer_size 10M;
-    client_max_body_size 10M;
-    keepalive_timeout 60;
+    reset_timedout_connection off;
+    send_timeout 60s;
+    client_body_timeout 120s;
+    client_body_buffer_size 16M;
+    client_max_body_size 20M;
+    keepalive_timeout 30s;
     server_tokens off;
     types_hash_max_size 4096;
+    proxy_buffering on;
+    proxy_buffer_size 32k;
+    proxy_busy_buffers_size 64k;
+    proxy_buffers 512 8k;
+    proxy_max_temp_file_size 0;
+    proxy_intercept_errors on;
+    proxy_read_timeout 300s;
+    proxy_connect_timeout 60s;
+    proxy_send_timeout 60s;
+    fastcgi_read_timeout 300s;
     http2 on;
     http3 on;
     ssl_early_data on;
@@ -47,6 +57,7 @@ http {
     ssl_ocsp on;
     ssl_ocsp_cache shared:ocspSSL:60m;
     ssl_verify_depth 2;
+    resolver 1.1.1.1 8.8.8.8 ipv6=off valid=300s;
     resolver_timeout 300s;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
     add_header X-Content-Type-Options nosniff;
@@ -126,45 +137,36 @@ http {
     proxy_temp_path /tmp/proxy_temp_path;
     fastcgi_temp_path /tmp/fastcgi_temp;
 
-    proxy_buffering on;
-    proxy_buffer_size 16k;
-    proxy_busy_buffers_size 24k;
-    proxy_buffers 384 4k;
-    proxy_max_temp_file_size 0;
-
     server {
-    listen 8080 default_server fastopen=256;
-    listen [::]:8080 default_server fastopen=256;
-    listen 8443 default_server quic reuseport;
-    listen [::]:8443 default_server quic reuseport;
-    listen 8443 default_server ssl fastopen=256;
-    listen [::]:8443 default_server ssl fastopen=256;
-    server_name test.example.com;
+        listen 8080 default_server fastopen=256;
+        listen 8443 default_server quic reuseport;
+        listen 8443 default_server ssl fastopen=256;
+        server_name test.example.com;
 
-    if ($scheme = http) {
-        return 308 https://test.example.com$request_uri;
-    }
-    if ($host = 'www.test.example.com') {
-        rewrite ^/(.*)$ https://test.example.com/$1 permanent;
-    }
-    if ($host != 'test.example.com') {
-        return 308 https://test.example.com$request_uri;
-    }
-    if ($request_method !~ ^(GET|POST|PUT)$) {
-        return '405';
-    }
+        if ($scheme = http) {
+            return 308 https://test.example.com$request_uri;
+        }
+        if ($host = 'www.test.example.com') {
+            rewrite ^/(.*)$ https://test.example.com/$1 permanent;
+        }
+        if ($host != 'test.example.com') {
+            return 308 https://test.example.com$request_uri;
+        }
+        if ($request_method !~ ^(GET|POST|PUT)$) {
+            return '405';
+        }
 
-    location / {
-      root /var/www/html;
-      index index.html index.htm;
+        location / {
+        root /var/www/html;
+        index index.html index.htm;
 
-      limit_except GET POST PUT {
-      deny all;
-      }
-    }
+        limit_except GET POST PUT {
+        deny all;
+        }
+        }
 
-    location /robots.txt {
-        return 200 "User-agent: *\nDisallow: /\n";
+        location /robots.txt {
+            return 200 "User-agent: *\nDisallow: /\n";
+        }
     }
-  }
 }
