--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         uses: docker/setup-buildx-action@v3.10.0
         with:
           version: v0.23.0
-          driver-opts: image=moby/buildkit:v0.21.0-rootless
+          driver-opts: image=moby/buildkit:v0.21.1-rootless
 
       - name: Log into GHCR🔑
         uses: docker/login-action@v3.4.0
@@ -117,7 +117,7 @@ jobs:
         with:
           image-ref: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           scan-type: image
-          format: "github"
+          format: "sarif"
           output: "trivy.report.json"
           severity: "MEDIUM,HIGH,CRITICAL"
           scanners: "vuln"
@@ -136,7 +136,8 @@ jobs:
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           fail-build: false
           severity-cutoff: critical
-          grype-version: v0.91.0
+          output-format: sarif
+          grype-version: v0.91.2
           output-file: "${{ github.workspace }}/grype.report.json"
 
       - name: Upload Grype report📊
@@ -164,7 +165,7 @@ jobs:
         uses: goodwithtech/dockle-action@main
         with:
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-          format: "json"
+          format: "sarif"
           output: "dockle.report.json"
           exit-code: "1"
           exit-level: "warn"
@@ -201,7 +202,7 @@ jobs:
       - name: Analyze image with Syft💊
         uses: anchore/sbom-action@v0.18.0
         with:
-          syft-version: v1.22.0
+          syft-version: v1.23.1
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           format: spdx-json
           output-file: syft.report.json
