--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and push image📦
+name: Build the image📦
 
 on:
   workflow_dispatch:
@@ -35,8 +35,8 @@ jobs:
       - name: Setup Docker buildx🛠️
         uses: docker/setup-buildx-action@v3.10.0
         with:
-          version: v0.23.0
-          driver-opts: image=moby/buildkit:v0.21.1-rootless
+          version: v0.24.0
+          driver-opts: image=moby/buildkit:v0.22.0-rootless
 
       - name: Log into GHCR🔑
         uses: docker/login-action@v3.4.0
@@ -137,7 +137,7 @@ jobs:
           fail-build: false
           severity-cutoff: critical
           output-format: sarif
-          grype-version: v0.91.2
+          grype-version: v0.92.2
           output-file: "${{ github.workspace }}/grype.report.json"
 
       - name: Upload Grype report📊
@@ -202,7 +202,7 @@ jobs:
       - name: Analyze image with Syft💊
         uses: anchore/sbom-action@v0.19.0
         with:
-          syft-version: v1.23.1
+          syft-version: v1.26.1
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           format: spdx-json
           output-file: syft.report.json
