--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  APP_VERSION: 1.28.0
+  APP_VERSION: 1.29.0
 
 jobs:
   build:
@@ -30,13 +30,13 @@ jobs:
       - name: Install cosign🔒
         uses: sigstore/cosign-installer@v3.8.2
         with:
-          cosign-release: "v2.5.0"
+          cosign-release: "v2.5.2"
 
       - name: Setup Docker buildx🛠️
         uses: docker/setup-buildx-action@v3.10.0
         with:
-          version: v0.24.0
-          driver-opts: image=moby/buildkit:v0.22.0-rootless
+          version: v0.25.0
+          driver-opts: image=moby/buildkit:v0.23.1-rootless
 
       - name: Log into GHCR🔑
         uses: docker/login-action@v3.4.0
@@ -137,7 +137,7 @@ jobs:
           fail-build: false
           severity-cutoff: critical
           output-format: sarif
-          grype-version: v0.92.2
+          grype-version: v0.94.0
           output-file: "${{ github.workspace }}/grype.report.json"
 
       - name: Upload Grype report📊
@@ -202,7 +202,7 @@ jobs:
       - name: Analyze image with Syft💊
         uses: anchore/sbom-action@v0.20.0
         with:
-          syft-version: v1.26.1
+          syft-version: v1.27.1
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           format: spdx-json
           output-file: syft.report.json
@@ -251,3 +251,13 @@ jobs:
           docker pull ammnt/nginx:${{ env.APP_VERSION }}
           cosign verify --key cosign.pub ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           cosign verify --key cosign.pub ammnt/nginx:${{ env.APP_VERSION }}
+
+      # - name: Add reports to final commit✅
+      #   if: ${{ github.event_name != 'pull_request' }}
+      #   run: |
+      #     git config --global user.name "ammnt"
+      #     git config --global user.email "admin@msftcnsi.com"
+      #     cd ${{ github.workspace }}
+      #     git add scout.report.json trivy.report.json grype.report.json dockle.report.json slim.report.json snyk.sarif syft.report.json
+      #     git commit -m "added: build reports to the final commit"
+      #     git push
