--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,22 +27,18 @@ jobs:
         uses: actions/checkout@v5.0.0
 
       - name: Load .env variables☁️
-        run: |
-          set -x
-          ls -lash
-          export $(cat ./.env | xargs)
-          printenv | sort -n
+        run: export $(cat ./.env | xargs)
 
       - name: Install cosign🔒
         uses: sigstore/cosign-installer@v3.9.2
         with:
-          cosign-release: "v2.5.3"
+          cosign-release: "v2.6.0"
 
       - name: Setup Docker buildx🛠️
         uses: docker/setup-buildx-action@v3.11.1
         with:
-          version: v0.27.0
-          driver-opts: image=moby/buildkit:v0.23.2-rootless
+          version: v0.28.0
+          driver-opts: image=moby/buildkit:v0.24.0-rootless
 
       - name: Log into GHCR🔑
         uses: docker/login-action@v3.5.0
@@ -106,12 +102,7 @@ jobs:
           tag: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           overwrite: true
           version: 1.40.11
-
-      - name: Dump the Slim report📊
-        run: |
-          echo "${REPORT}" > slim.report.json
-        env:
-          REPORT: ${{ steps.slim.outputs.report }}
+          args: --report slim.report.json
 
       - name: Analyze image with Docker Scout💊
         uses: docker/scout-action@v1.18.2
@@ -120,12 +111,6 @@ jobs:
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           sarif-file: scout.report.json
           summary: false
-
-      - name: Upload Docker Scout report📊
-        uses: actions/upload-artifact@v4.6.2
-        with:
-          name: Scout Report
-          path: "${{ github.workspace }}/scout.report.json"
 
       - name: Analyze image with Trivy💊
         uses: aquasecurity/trivy-action@0.33.0
@@ -138,12 +123,6 @@ jobs:
           scanners: "vuln"
           github-pat: ${{ secrets.GH_TOKEN }}
 
-      - name: Upload Trivy report📊
-        uses: actions/upload-artifact@v4.6.2
-        with:
-          name: Trivy Report
-          path: "${{ github.workspace }}/trivy.report.json"
-
       - name: Analyze image with Grype💊
         id: anchore
         uses: anchore/scan-action@v6.5.1
@@ -152,14 +131,8 @@ jobs:
           fail-build: false
           severity-cutoff: critical
           output-format: sarif
-          grype-version: v0.99.1
-          output-file: "${{ github.workspace }}/grype.report.json"
-
-      - name: Upload Grype report📊
-        uses: actions/upload-artifact@v4.6.2
-        with:
-          name: Grype Report
-          path: "${{ github.workspace }}/grype.report.json"
+          grype-version: v0.100.0
+          output-file: grype.report.json
 
       - name: Analyze image with Snyk💊
         continue-on-error: true
@@ -169,12 +142,6 @@ jobs:
         with:
           image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           args: --file=Dockerfile.template
-
-      - name: Upload Snyk report📊
-        uses: actions/upload-artifact@v4.6.2
-        with:
-          name: Snyk Report
-          path: "${{ github.workspace }}/snyk.sarif"
 
       - name: Analyze image with Dockle💊
         uses: goodwithtech/dockle-action@main
@@ -186,20 +153,16 @@ jobs:
           exit-level: "warn"
           ignore: "CIS-DI-0010"
 
-      - name: Upload Dockle report📊
-        uses: actions/upload-artifact@v4.6.2
-        if: always()
+      - name: Analyze image with Syft💊
+        uses: anchore/sbom-action@v0.20.5
         with:
-          name: Dockle Report
-          path: "${{ github.workspace }}/dockle.report.json"
+          syft-version: v1.33.0
+          image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
+          format: spdx-json
+          output-file: syft.report.json
+          upload-artifact: false
 
-      - name: Upload the Slim report📊
-        uses: actions/upload-artifact@v4.6.2
-        with:
-          name: Slim Report
-          path: "${{ github.workspace }}/slim.report.json"
-
-      - name: Explore the Docker image with Dive🔍
+      - name: Explore the Docker image and test with Dive🔍
         timeout-minutes: 2
         env:
           CI: true
@@ -207,37 +170,30 @@ jobs:
           wget -q https://github.com/wagoodman/dive/releases/download/v0.13.1/dive_0.13.1_linux_amd64.tar.gz
           tar xvzf dive_0.13.1_linux_amd64.tar.gz -C /usr/local/bin
           dive --ci-config "${{ github.workspace }}/.dive-ci/" ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-
-      - name: Test the Docker image🧪
-        run: |
           docker run -d --name nginx --rm -p 127.0.0.1:8080:8080/tcp ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           curl -v http://127.0.0.1:8080 || exit 1
 
-      - name: Analyze image with Syft💊
-        uses: anchore/sbom-action@v0.20.5
-        with:
-          syft-version: v1.32.0
-          image: ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
-          format: spdx-json
-          output-file: syft.report.json
-          upload-artifact: false
-
-      - name: Upload the Syft report (SBOM)📊
+      - name: Upload all reports📊
         uses: actions/upload-artifact@v4.6.2
         with:
-          name: Syft Report (SBOM)
-          path: syft.report.json
+          name: security-reports
+          path: |
+            "${{ github.workspace }}/syft.report.json"
+            "${{ github.workspace }}/scout.report.json"
+            "${{ github.workspace }}/trivy.report.json"
+            "${{ github.workspace }}/grype.report.json"
+            "${{ github.workspace }}/dockle.report.json"
+            "${{ github.workspace }}/slim.report.json"
+            "${{ github.workspace }}/snyk.sarif"
 
       - name: Push the Docker images to registries💾
         run: |
           docker tag ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} ghcr.io/ammnt/nginx:latest
           docker tag ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} ammnt/nginx:${{ env.APP_VERSION }}
           docker tag ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} ammnt/nginx:latest
-          docker images | grep nginx
           docker push ghcr.io/ammnt/nginx --all-tags
           docker push ammnt/nginx --all-tags
-          DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' ghcr.io/ammnt/nginx:${{ env.APP_VERSION }} | sed -e "s|ghcr.io/ammnt/nginx@||g" | sed -e "s|ammnt/nginx@||g")
-          echo "DIGEST=$DIGEST" >> $GITHUB_ENV
+          echo "DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' ammnt/nginx:${{ env.APP_VERSION }} | sed -e "s|ammnt/nginx@||g")" >> $GITHUB_ENV
 
       - name: Attestation the Docker image📍
         uses: actions/attest-build-provenance@v3.0.0
@@ -248,7 +204,7 @@ jobs:
           show-summary: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Sign the published Docker image🔐
+      - name: Sign and check published Docker images🔐
         env:
           COSIGN_EXPERIMENTAL: "true"
           COSIGN_KEY: ${{secrets.COSIGN_KEY}}
@@ -256,13 +212,11 @@ jobs:
         run: |
           cosign sign -y --recursive --key env://COSIGN_KEY ghcr.io/ammnt/nginx@${{ env.DIGEST }}
           cosign sign -y --recursive --key env://COSIGN_KEY ammnt/nginx@${{ env.DIGEST }}
-        shell: bash
-
-      - name: Check the published Docker image👌
-        run: |
           docker buildx imagetools inspect ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           docker buildx imagetools inspect ammnt/nginx:${{ env.APP_VERSION }}
           docker pull ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           docker pull ammnt/nginx:${{ env.APP_VERSION }}
           cosign verify --key cosign.pub ghcr.io/ammnt/nginx:${{ env.APP_VERSION }}
           cosign verify --key cosign.pub ammnt/nginx:${{ env.APP_VERSION }}
+          docker system prune -f
+          rm -rf ${{ github.workspace }}/*
